# lensbridge

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  TEST-CAMERAS.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.base.json  turbo.json  vitest.workspace.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  errors.rs  main.rs  state.rs
apps/desktop/src-tauri/src/ai/: autoframe.rs  mod.rs  processor_trait.rs
apps/desktop/src-tauri/src/audio/: mod.rs  noise_cancel.rs  virtual_mic.rs
apps/desktop/src-tauri/src/cleanup/: mod.rs  uninstall.rs
apps/desktop/src-tauri/src/config/: app_config.rs  mod.rs  profiles.rs
apps/desktop/src-tauri/src/media/: ffmpeg.rs  frame.rs  gstreamer.rs  metrics.rs  mod.rs  pipeline.rs  quality.rs
apps/desktop/src-tauri/src/network/: local_ip.rs  mdns.rs  mod.rs  ports.rs
apps/desktop/src-tauri/src/pairing/: mod.rs  qr_payload.rs  session.rs  token.rs
apps/desktop/src-tauri/src/security/: allowlist.rs  audit_log.rs  mod.rs  session.rs  tls.rs  tokens.rs
apps/desktop/src-tauri/src/signaling/: messages.rs  mod.rs  router.rs  server.rs
apps/desktop/src-tauri/src/sources/: desktop_webrtc.rs  ip_camera_rtsp.rs  mod.rs  obs_source.rs  phone_webrtc.rs  screen_capture.rs  source_manager.rs  source_trait.rs
apps/desktop/src-tauri/src/transports/: bluetooth_pairing.rs  mod.rs  remote_turn.rs  transport_trait.rs  usb_adb.rs  wifi_direct.rs  (+1 more)
(+174 files in other folders)
